# typer

./: :w  Cargo.toml  \  ]  index.html
public/styles/: custom_textarea.css  home_view.css  main_navbar.css  styles.css
public/styles/home_view/: main.css  modal.css
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  dbstructs.rs  lib.rs  main.rs  state.rs
src/components/: custom_textarea.rs  main_navbar.rs  mod.rs
src/components/icons/: add_icon.rs  cancel_icon.rs  confirm_icon.rs  flag_fill_icon.rs  flag_icon.rs  home_fill_icon.rs  home_icon.rs  mod.rs  settings_fill_icon.rs  settings_icon.rs
src/components/views/: home_view.rs  languages.rs  mod.rs  settings_view.rs
